cli/testdata/invalid-modules/invalid-syntax/releases/module_release.cue
package invalidsyntax

// Also has invalid syntax
kind == "ModuleRelease"  // Should be: kind: "ModuleRelease"
